--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
   font-family: "FiraGO rg";
-  background-color: #f3f2fa;
+  background-color: #fbfaff;
   font-size: 16px;
+  position: relative;
 }
 
 .container {
@@ -28,6 +29,9 @@ body {
 }
 .justify-content-between {
   justify-content: space-between;
+}
+.justify-content-end {
+  justify-content: end;
 }
 .flex-column {
   flex-direction: column;
@@ -202,6 +206,9 @@ header {
 .mb-24 {
   margin-bottom: 24px;
 }
+
+/*add-blog-page*/
+
 .blog_add_block {
   width: 600px;
   margin: 0 auto;
@@ -212,12 +219,12 @@ header {
   color: #1a1a1f;
   font-family: "FiraGO md";
 }
-.upload_images {
+.upload_images_block {
   position: relative;
   display: inline-block;
   overflow: hidden;
 }
-.upload_images input {
+.upload_images_block input {
   position: absolute;
   left: 0;
   top: 0;
@@ -227,7 +234,7 @@ header {
   height: 100%;
 }
 
-.upload_images label {
+.upload_images_block label {
   padding: 48px 20px;
   border: 1px dashed #85858d;
   background-color: #f4f3ff;
@@ -235,7 +242,209 @@ header {
   cursor: pointer;
   font-size: 14px;
 }
-.upload_images label span {
+.upload_images_block label span {
   font-family: "FiraGO md";
   text-decoration: underline;
+}
+.mb-8 {
+  margin-bottom: 8px;
+}
+.add_inputs,
+.dropbtn {
+  width: 288px;
+}
+.dropbtn {
+  display: flex;
+  align-items: center;
+}
+.add_inputs input,
+.blog_txtarea,
+.dropbtn {
+  border: 1px solid #e4e3eb;
+  background-color: #fcfcfd;
+  border-radius: 12px;
+  padding: 13px 16px;
+  color: #85858d;
+  text-align: left;
+}
+.blog_txtarea {
+  resize: none;
+  height: 124px;
+}
+.add_inputs input::placeholder {
+  color: #85858d;
+}
+input:focus-visible,
+.blog_txtarea:focus-visible {
+  outline: none;
+}
+.ul_list li {
+  padding-left: 16px;
+}
+.ul_list li,
+.required_txt {
+  position: relative;
+  color: #85858d;
+  font-size: 12px;
+}
+.ul_list li::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  background-color: #85858d;
+  border-radius: 50%;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.ul_list {
+  line-height: 20px;
+}
+.sm_title {
+  font-family: "FiraGO md";
+  font-size: 14px;
+  color: #1a1a1f;
+}
+.send_btn {
+  width: 288px;
+  padding: 10px 90px;
+  font-size: 14px;
+  font-family: "FiraGO md";
+  background-color: #e4e3eb;
+  border-radius: 8px;
+  color: #fff;
+  border: none;
+}
+.uploaded_image {
+  display: none;
+  background-color: #f2f2fa;
+  padding: 14px 16px;
+  border-radius: 12px;
+}
+.image_name {
+  margin-left: 12px;
+}
+.delete_btn {
+  cursor: pointer;
+}
+.important_msg {
+  display: none;
+  color: #ea1919;
+  font-size: 12px;
+}
+.important_msg i {
+  margin-right: 8px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100%;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 100%;
+  left: 0;
+}
+/* Style the labels inside the dropdown */
+.dropdown-content label {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #333;
+}
+
+/* Change color on hover */
+.dropdown-content label:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown content when the button is clicked */
+.dropdown.active .dropdown-content {
+  display: block;
+}
+
+/* Style the arrow indicator */
+.dropdown::after {
+  content: "";
+  border-width: 6px;
+  border-style: solid;
+  border-color: #3498db transparent transparent transparent;
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+/* Style the selected items container */
+.selected-items {
+  margin: 20px;
+  font-weight: bold;
+}
+
+.btn_item {
+  position: relative;
+}
+.dlt-btn {
+  cursor: pointer;
+}
+.inner_item {
+  margin-right: 10px;
+}
+.btnactive {
+  background-color: #5d37f3;
+}
+.success_message {
+  width: 480px;
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 24px;
+}
+.close {
+  display: flex;
+  justify-content: flex-end;
+  color: #1a1a1f;
+  cursor: pointer;
+}
+.mb-16 {
+  margin-bottom: 16px;
+}
+.success_msg {
+  font-size: 20px;
+}
+.mb-48 {
+  margin-bottom: 48px;
+}
+.back_ {
+  width: 100%;
+  height: 40px;
+  color: #fff;
+  font-size: 14px;
+  background-color: #5d37f3;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.success_body {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(26, 26, 31, 0.4);
 }
