--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,10 @@ h1{
   font-style: normal;
   font-weight: 400;
   line-height: 28px; 
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .other-link{
   display: flex;
@@ -171,4 +175,5 @@ h1{
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
+  cursor: pointer;
 }
